--- a/resources/templates/wiki.html
+++ b/resources/templates/wiki.html
@@ -2,11 +2,9 @@
 
 {% block extra-headers %}
   {% for script in scripts %}
-      <script src="{{script}}"></script>
-  {% endfor %}
+    <script src="{{script}}"></script>{% endfor %}
   {% for style in styles %}
-      <link href="{{style}}" rel="stylesheet" type="text/css" />
-  {% endfor %}
+    <link href="{{style}}" rel="stylesheet" type="text/css" />{% endfor %}
 {% endblock %}
 
 {% block content %}
