Added Ginny's stylesheet permanently to the archive
Work on 'failed to find dimensions of image' bug, which only happens under Tomcat. Not yet resolved.

--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -39,7 +39,7 @@
               Smeagol wiki engine {{version}} ||
               <img height="16" width="16"
                    alt="The Web Engineering Factory &amp; Toolworks"
-                  src="http://www.weft.scot/images/weft.logo.64.png">
+                  src="https://www.weft.scot/images/weft.logo.64.png">
               Developed by <a href="http://www.weft.scot/">WEFT</a>
             </p>
           </div>
