Clearer uploaded-image display page.

--- a/resources/templates/upload.html
+++ b/resources/templates/upload.html
@@ -8,6 +8,7 @@
                 <img id="uploaded-image" alt="Uploaded image" src="{{upload.resource}}"/>
 
                 <!-- TODO: i18n needed -->
+                <br clear="all"/>
                 This is the {{upload.size|name}} file. {% i18n file-upload-link-text %}:
 
                 <code>![{{upload.filename}}]({{upload.resource}})</code>
