--- a/resources/templates/base.html
+++ b/resources/templates/base.html
@@ -37,11 +37,7 @@
             <p>
               <img height="16" width="16" alt="one wiki to rule them all"
                    src="img/smeagol.png"/>One Wiki to rule them all ||
-              Smeagol wiki engine {{version}} ||
-              <img height="16" width="16"
-                   alt="The Web Engineering Factory &amp; Toolworks"
-                  src="https://www.weft.scot/images/weft.logo.64.png">
-              Developed by <a href="http://www.weft.scot/">WEFT</a>
+              Smeagol wiki engine {{version}} 
             </p>
           </div>
         </div>
@@ -82,13 +78,13 @@
          <div>
            <img height="16" width="16" alt="one wiki to rule them all" src="img/smeagol.png"/>One Wiki to rule them all ||
            Smeagol wiki engine {{version}} ||
-           <img height="16" width="16" alt="The Web Engineering Factory &amp; Toolworks" src="https://www.weft.scot/images/weft.logo.64.png"> Developed by <a href="http://www.weft.scot/">WEFT</a>
+           <img height="16" width="16" alt="Free Software Foundation" src="img/gnu.small.png"/>Licensed under the 
+           <a href="http://www.gnu.org/licenses/gpl-2.0.html">GNU General Public License version 2.0</a>
          </div>
          <div>
            Built with <a href="http://www.luminusweb.net/">LuminusWeb</a> ||
            <img height="16" width="16" alt="Clojure" src="img/clojure-icon.gif"/> Powered by <a href="http://clojure.org">Clojure</a> ||
            <img height="16" width="16" alt="GitHub" src="img/github-logo-transparent.png"/>Find me/fork me on <a href="https://github.com/simon-brooke/smeagol">Github</a> ||
-           <img height="16" width="16" alt="Free Software Foundation" src="img/gnu.small.png"/>Licensed under the <a href="http://www.gnu.org/licenses/gpl-2.0.html">GNU General Public License version 2.0</a>
          </div>
       </div>
     <footer>
